<resources>
    <string name="app_name">Pear&#160;Video</string>
    <string name="app_start_cn">青&#160;梨&#160;视&#160;频</string>
    <string name="app_start_enfirst">Green</string>
    <string name="app_start_encenter">Pear</string>
    <string name="app_start_enlast">Video</string>
    <string name="app_frush">正在刷新...</string>
    <string name="app_more">正在加载更多...</string>
    <string name="app_mine_myNickname">登录/注册</string>
    <string name="app_mine_myCollection">我的收藏</string>
    <string name="app_mine_mySubscription">我的订阅</string>
    <string name="app_mine_browsingHistory">浏览历史</string>
    <string name="app_mine_videoRebellion">视频报料</string>
    <string name="app_mine_myMessage">我的消息</string>
    <string name="app_mine_myInterest">我的兴趣</string>
    <string name="app_mine_changePassword">修改密码</string>
    <string name="app_mine_quit">退出登录</string>
    <string name="app_login_register">注册</string>
    <string name="app_login_login">登录</string>
    <string name="app_login_phoneoremail">请输入手机/邮箱</string>
    <string name="app_login_password">请输入密码</string>
    <string name="app_login_forgetpassword">忘记密码?</string>
    <string name="app_subscription_top">没订阅内容，去看看有什么好栏目</string>
    <string name="app_subscription_bottom">热门栏目</string>
    <string name="app_action_title">兴趣</string>
    <string name="app_action_right">偏好选择</string>
    <string name="index_sort">分类排序</string>
    <string name="index_other_new">最新</string>
    <string name="app_register_invitation">获取邀请码</string>
    <string name="app_register_nextStep">下一步</string>
    <string name="sort_index">首页</string>
    <string name="sort_interest">兴趣</string>
    <string name="sort_sub">订阅</string>
    <string name="sort_me">我</string>

</resources>
