<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_all_sort"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context="com.qf.pearvideo.activity.AllSortActivity">
    
    <FrameLayout
        android:id="@+id/replaceId"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tv"
        >
    </FrameLayout>
    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_above="@+id/rg"
        android:layout_marginBottom="5dp"
        android:background="#ccc"
        />
    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        >
        <RadioButton
            android:id="@+id/rb_index"
            style="@style/rbstyle"
            android:text="@string/sort_index"
            android:drawableTop="@drawable/rb_index_selector"
            />
        <RadioButton
            android:id="@+id/rb_interest"
            style="@style/rbstyle"
            android:text="@string/sort_interest"
            android:drawableTop="@drawable/rb_interest_selector"
            />
        <RadioButton
            android:id="@+id/rb_sub"
            style="@style/rbstyle"
            android:text="@string/sort_sub"
            android:drawableTop="@drawable/rb_sub_selector"
            />
        <RadioButton
            android:id="@+id/rb_me"
            style="@style/rbstyle"
            android:text="@string/sort_me"
            android:drawableTop="@drawable/rb_me_selector"
            />
    </RadioGroup>
</RelativeLayout>
