<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:id="@+id/forgetPasswordBackwards"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:src="@drawable/icon_back"/>

    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/colorBlack"
        android:textSize="30sp"
        android:text="@string/app_login_forgetpassword"/>

    <EditText
        android:id="@+id/forgetPasswordEnterMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="40dp"
        android:hint="@string/app_login_phoneoremail"
        android:textColorHint="#ccc"
        android:textColor="@color/colorBlack"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/forgetPasswordEnterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:hint="@string/app_login_password"
            android:inputType="textPassword"
            android:textColorHint="#ccc"
            android:textColor="@color/colorBlack"
            />
        <Button
            android:id="@+id/forgetPasswordGetInvitationCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentRight="true"
            android:textColor="#ccc"
            android:background="@color/colorWhite"
            android:text="@string/app_register_invitation"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/forgetPasswordNextStep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="45dp"
        android:text="@string/app_register_nextStep"
        android:textSize="20sp"
        android:textColor="#ccc"/>
</LinearLayout>
