<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:id="@+id/backwards"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:src="@drawable/icon_back"/>
        <TextView
            android:id="@+id/loginRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ccc"
            android:textSize="18dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:text="@string/app_login_register"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/colorBlack"
        android:textSize="30dp"
        android:text="@string/app_login_login"/>

    <EditText
        android:id="@+id/enterMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="40dp"
        android:hint="@string/app_login_phoneoremail"
        android:textColorHint="#ccc"
        android:textColor="@color/colorBlack"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/enterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:hint="@string/app_login_password"
            android:inputType="textPassword"
            android:textColorHint="#ccc"
            android:textColor="@color/colorBlack"
            />
        <ImageView
            android:id="@+id/passwordNoSee"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerInParent="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/icon_passwordnosee"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_login_forgetpassword"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:textColor="#ccc"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/loginLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="45dp"
        android:text="@string/app_login_login"
        android:textSize="20dp"
        android:textColor="#ccc"/>



</LinearLayout>
