<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_subscription"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context="com.qf.pearvideo.activity.SubscriptionActivity">

    <fragment
        android:id="@+id/subscription_title"
        android:name="com.qf.pearvideo.fragment.FragmentAction"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        />
    <LinearLayout
        android:id="@+id/subscription_mFrush"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subscription_title"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="#fff"
        android:gravity="center"
        android:visibility="gone"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_frush"
            android:textColor="#ccc"
            android:textSize="15sp"
            />
    </LinearLayout>
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/subscription_mSwipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="#fff"
                    android:gravity="center"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#3e3e3e"
                        android:textSize="15sp"
                        android:text="@string/app_subscription_top"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="#E7E7E7"
                    android:gravity="center_horizontal"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_subscription_bottom"
                        android:textSize="18sp"
                        android:textColor="#000"
                        android:layout_marginTop="80dp"
                        />
                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                    </HorizontalScrollView>
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </android.support.v4.widget.SwipeRefreshLayout>
</RelativeLayout>
