<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_subscription"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
   >
    <include
        android:id="@+id/subscription_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        layout="@layout/action_title"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/subscription_mFrush" />
    <LinearLayout
        android:id="@+id/subscription_mFrush"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subscription_title"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="#fff"
        android:gravity="center"
        android:visibility="gone"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_frush"
            android:textColor="#ccc"
            android:textSize="15sp"
            />
    </LinearLayout>
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/subscription_mSwipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/subscription_mFrush"
        >
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="#fff"
                    >
                    <TextView
                        android:id="@+id/subscription_skip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="60dp"
                        android:textColor="#3e3e3e"
                        android:textSize="15sp"
                        android:text="@string/app_subscription_top"
                        android:layout_centerHorizontal="true"
                        />
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/subscription_skip"
                        android:layout_marginTop="30dp"
                        >
                        <com.qf.pearvideo.view.CircleImageView
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:src="@drawable/icon_circle"
                            android:layout_gravity="center"
                            />
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/icon_add"
                            android:layout_gravity="center"
                            />
                    </FrameLayout>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="#E7E7E7"
                    >
                    <TextView
                        android:id="@+id/lanmu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_subscription_bottom"
                        android:textSize="18sp"
                        android:textColor="#000"
                        android:layout_marginTop="30dp"
                        android:layout_centerHorizontal="true"
                        />
                    <HorizontalScrollView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/lanmu"
                        android:layout_marginBottom="30dp"
                        android:layout_marginTop="30dp"
                        android:scrollbars="none"
                        >
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            >
                            <FrameLayout
                                android:layout_width="100dp"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="10dp"
                                android:background="@drawable/paddings"
                                >
                                <ImageView
                                    android:layout_width="20dp"
                                    android:layout_height="20dp"
                                    android:layout_marginTop="40dp"
                                    android:src="@drawable/icon_add"
                                    android:layout_gravity="center_horizontal"
                                    />
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="更多栏目"
                                    android:textColor="#3e3e3e"
                                    android:textSize="15sp"
                                    android:layout_gravity="center"
                                    />
                            </FrameLayout>
                        </LinearLayout>
                    </HorizontalScrollView>
                </RelativeLayout>
            </LinearLayout>
        </FrameLayout>
    </android.support.v4.widget.SwipeRefreshLayout>
</RelativeLayout>
